Fixed line spacing for better responsiveness.

--- a/src/app/components/active-recipe/active-recipe-view.scss
+++ b/src/app/components/active-recipe/active-recipe-view.scss
@@ -67,6 +67,7 @@ $ingredients-list-color: #9acd32;
                             flex-direction: column;
                             justify-content: center;
                             padding: 0 70px;
+                            line-height: normal;
 
                             .active-recipe-publisher,
                             .active-recipe-website,
